--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/tape": "^4.13.0",
     "ampify-prettier-config": "git+https://github.com/Focusrite-Novation/ampify-prettier-config.git",
     "i-spy": "1.0.1",
-    "prettier": "2.0.5",
+    "prettier": "^1.18.2",
     "tap-spec": "5.0.0",
     "tape": "5.0.1",
     "tslint": "^5.20.0",
